// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Node with right/left child 1`] = `
Node {
  "_options": Object {
    "color": 1,
    "data": "inner",
    "id": null,
    "left": Node {
      "_options": Object {
        "color": 0,
        "data": "left child",
        "id": null,
        "left": null,
        "parent": null,
        "parentId": null,
        "right": null,
      },
    },
    "parent": Node {
      "_options": Object {
        "color": 0,
        "data": "parent reference",
        "id": null,
        "left": null,
        "parent": null,
        "parentId": null,
        "right": null,
      },
    },
    "parentId": null,
    "right": Node {
      "_options": Object {
        "color": 0,
        "data": "right child",
        "id": null,
        "left": null,
        "parent": null,
        "parentId": null,
        "right": null,
      },
    },
  },
}
`;

exports[`Test creation of a simple Node 1`] = `
Node {
  "_options": Object {
    "color": 0,
    "data": "test",
    "id": null,
    "left": null,
    "parent": null,
    "parentId": null,
    "right": null,
  },
}
`;
